--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,3 +21,7 @@ jpa:
         show_sql: true
     entity-scan:
       packages: 'mn.data.domain'
+---
+jackson:
+  serialization:
+    writeDatesAsTimestamps: false
